--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-   "engines": {
+  "engines": {
     "node": "16.x"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
-    "p-limit": "^6.2.0"
+    "p-limit": "^6.2.0",
+    "sharp": "^0.29.3"
   }
 }
